BING-61: fix popover shifting focus off of searchBar

--- a/app/bingey-ui/src/components/Search/searchStyle.scss
+++ b/app/bingey-ui/src/components/Search/searchStyle.scss
@@ -42,7 +42,7 @@ $smBreakpoint: 600px;
     transition: width 0.25s ease-out !important;
     width: 12ch !important;
     &:focus {
-      width: 20ch !important;
+      width: 22.25em !important;
     }
   }
 }
